2013-10-03  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-13
	* fix fid test
	* M python/AthFile/impl.py

2013-10-02  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-12
	* protect against identical files under different paths/names
	* M python/AthFile/impl.py

2013-09-30  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-11
	* split fopen into fopen and pfopen (its parallel cousin)
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py
	* M bin/dump-athfile.py

2013-08-07  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-13-10
	* dont crash and burn while retrieving AtlasProject from asetup.save
	* M bin/setupWorkArea.py

2013-07-01   Grigori Rybkine <Grigori.Rybkine@cern.ch>

	* python/WorkAreaLib.py: Get install area location from cmt
	so that it is correct whether CMTUSERCONTEXT is set or not
	* tagging PyUtils-00-13-09
	
2013-06-18  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-08
	* try to cater for CMTUSERCONTEXT which might inject a
	  non-writeable path in CTMPATH (at first position)
	* M python/WorkAreaLib.py

2013-05-13  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-13-07
	* add --disable-recursive-opt: useful for large n-tuples (python is recursively slow)
	* M bin/filter-and-merge-d3pd.py

2013-05-02  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-06
	* fixing bug #101385: use ctypes to remove unwanted stray NULLs
	  (also to extract tag_guid)
	* M python/AthFile/impl.py

2013-04-24  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-05
	* fixing bug #101200: use ctypes instead of .rstrip(0) to remove
	  unwanted stray NULLs
	* M python/AthFile/impl.py

2013-04-08  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-04
	* diff-root: add an --error-mode switch to better customize when to
	  stop the diffing process.
	* M python/scripts/diff_root_files.py
	* M python/RootUtils.py
